first formatting run

--- a/Report/pages/angular.tex
+++ b/Report/pages/angular.tex
@@ -12,11 +12,11 @@ When using the Angular framework a developer will implement his view logic using
 
 An Angular component can be compared to a View and ViewModel combination from the \gls{mvvm} pattern. It is composed of three files. There is one \gls{html} and one \gls{css} file which make up the View. The ViewModel is a \gls{ts} file which contains the essential logic for the View. The component is always declared in the \gls{ts} file with the \lstcode{@Component} decorator, see \myautoref{lst:example-component.ts}.
 
-\file{example-component.ts}{Example of an Angular Component TypeScript File.}{JavaScript}
-
 The \lstcode{@Component} decorator can take many arguments, but the commonly used ones are: \enquote{selector}, \enquote{templateUrl}, and \enquote{styleUrls} \cite{ngcomponent}. The selector is a string which starts by convention with \enquote{app} and is then followed by the component's name, see \mylineref{lst:example-component.ts}{comp_selector}. The selector is used to include this component in the \gls{html} of another component.
 
 The \enquote{templateUrl} and \enquote{styleUrls} arguments reference the corresponding \gls{html} and \gls{css} files, respectively (\mylineref{lst:example-component.ts}{comp_templateUrl} and \ref{line:comp_styleUrls}). Both arguments take a relative path, \enquote{templateUrl} is always related to a single file, \enquote{styleUrls} may be related to multiple files in the project. Inline variants may be used for both arguments, though out of readability concerns they should be avoided when possible.
+
+\file{example-component.ts}{Example of an angular component typescript file.}{JavaScript}
 
 \Subsubsection{Lifecycle Hooks}
 The Angular framework manages the lifecycle of each component. Throughout this lifecycle Angular offers the possibility to respond to certain events \zB \lstcode{ngOnDestroy()} where the developer could run a cleanup routine. In order to respond to any of these events the developer has to implement one method per event. The method signatures are defined by the Angular framework and exposed as interfaces. Since the executed code at runtime is \gls{js} code, interfaces are not necessary. Nonetheless it is considered \enquote{best-practice} to use these interfaces.
@@ -24,15 +24,15 @@ The Angular framework manages the lifecycle of each component. Throughout this l
 \Subsubsection[bindings]{Template Syntax - Bindings}
 A template in the Angular context is equivalent to a \gls{mvvm} View and is written in \gls{html}. All \gls{html} tags are allowed, though some tags like \lstcode{<html>} or \lstcode{<body>} are meaningless in this context. The official set of tags is extended with tags that refer to components as described in \myref{subsubsec:components}.
 
-\file{nav-item-component.html}{Example of an Angular Template.}{HTML5}
-
 Like many \gls{mvvm} frameworks, Angular supports bindings. These are used to display data obtained from the ViewModel or, in case of input controls, send data back to the ViewModel. Interpolation is used to display data. The syntax used by Angular is \{\{\lstcode{myObject.myProperty}\}\} as shown in \mylineref{lst:nav-item-component.html}{navItem_interpolation}. Angular will evalute the text between the curly brackets as an expression and then display the result. The context for the expression usually is the component's instance.
+
+\file{nav-item-component.html}{Example of an angular template.}{HTML5}
 
 In case data from the ViewModel should be passed on to another component, which is referenced via its \gls{html} tag, the square bracket notation is used (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}). It is also possible to use the \lstcode{bind-} prefix \zB \lstcode{bind-CurrentItem="subItem"}. For both of these methods to work, the receiving component needs a property in its ViewModel which is declared with the \lstcode{@Input()} decorator, see \mylineref{lst:example-component.ts}{comp_input}.
 
 For events, the standard \gls{js} round bracket notation (\mylineref{lst:nav-item-component.html}{navItem_inputProperty}) or the \lstcode{on-} prefix \zB \lstcode{on-ItemClicked="ItemClicked.emit()"} are used. Custom components can declare their own events using the \lstcode{@Output()} decorator on a property (\mylineref{lst:example-component.ts}{comp_output}). The property usually is of type \lstcode{EventEmitter}. If RxJS Observables are used, \lstcode{Observable<T>} or \lstcode{Subject<T>} are also possible \cite{rxjs}.
 
-Forms often use elements like a \enquote{Combobox} or \enquote{Dropdown} menu of which the \lstcode{SelectedItem} property is supposed to be \enquote{mirrored} to a property in the component. This gives the developer easy access to read but also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brackets inside square brackets \zB \lstcode{[(SelectedItem)]="userSelection"}. The two-way binding can also be achived using the \lstcode{bindon-} prefix \zB \lstcode{bindon-SelectedItem="userSelection"}. \cite{angularTemplateSyntax}
+Forms often use elements like a \enquote{Combobox} or \enquote{Dropdown} menu of which the \lstcode{SelectedItem} property is supposed to be \enquote{mirrored} to a property in the component. This gives the developer easy access to read but also change the value from within the ViewModel. In this case a two-way binding can be used. Angular uses the \enquote{Banana-in-a-box} notation which are round brackets inside square brackets \zB \lstcode{[(SelectedItem)]="userSelection"}. The two-way binding can also be achived using the \lstcode{bindon-} prefix \zB \lstcode{bindon-SelectedItem=\allowbreak "userSelection"}. \cite{angularTemplateSyntax}
 
 \Subsubsection{Template Syntax - Directives}
 
@@ -47,7 +47,7 @@ The third built-in directive is the switch-case directive which lets the develop
 
 Angular also offers support for pipes which are very similar to \gls{wpf} converters, with the exception that an Angular pipe only works in one direction. This is useful for formatting the \enquote{raw} data \zB \lstcode{\{\{title | uppercase | lowercase\}\}}. As shown in the example, pipes can be chained. It is also possible to add parameters to a pipe, one example is the \lstcode{date} pipe, where the name for a date format can be passed as an argument \zB \lstcode{\{\{ myDate | date:'longDate'\}\}}. Angular offers many built-in pipes, but it is also possible to create a custom one. To do so, the developer creates a new class which implements the \lstcode{PipeTransform} interface and uses the \lstcode{@Pipe()} decorator as shown in \myautoref{lst:boolean-yes-no-pipe.ts}. \cite{angularTemplateSyntax}
 
-\file{boolean-yes-no-pipe.ts}{A Custom Pipe to Convert a Boolean to 'Yes' or 'No'.}{JavaScript}
+\file{boolean-yes-no-pipe.ts}{A custom pipe to convert a boolean to 'yes' or 'no'.}{JavaScript}
 
 
 \Subsubsection{Services}
@@ -77,13 +77,13 @@ Every Angular application is a \gls{spa}, which means that the client downloads 
 
 \file{navigation-bar.html}{The Jukebox navigation bar and router-outlet.}{HTML5}
 
-Routing is done through the \lstcode{<router-outlet></router-outlet>} tags in \gls{html} and the \lstcode{RouterModule}. The \lstcode{<router-outlet />} tag tells Angular that the developer wants to display different \enquote{subsites} at this location in the \gls{dom}. Usually an application has some kind of menu or navigation bar which is always visible and then the rest of content is displayed through the router outlet, as shown in \mylineref{lst:navigation-bar.html}{navbar_router}.
+Routing is done through the \lstcode{<router-outlet />} tag in \gls{html} and the \lstcode{RouterModule}. The \lstcode{<router-outlet />} tag tells Angular that the developer wants to display different \enquote{subsites} at this location in the \gls{dom}. Usually an application has some kind of menu or navigation bar which is always visible and then the rest of content is displayed through the router outlet, as shown in \mylineref{lst:navigation-bar.html}{navbar_router}.
 
 Angular's routing module also changes the URL in the browser's address bar. This allows for deep links into the site, but also requires any web server which serves this \gls{spa} to return the same \gls{html} for all URLs whithout a redirect to the index.html route, or otherwise it would break Angular's routing.
 
 \file{security-routing-module.ts}{The Jukebox security route definitions.}{JavaScript}
 
-To define the application routes and map their components, the \lstcode{RouterModule.forRoot} or \lstcode{RouterModule.forChild} methods are used (\mylineref{lst:security-routing-module.ts}{routing_forChild}). The \lstcode{RouterModule.forRoot} method may only be called once and is usually located in the app-routing.module.ts file. Following the Angular code style guidelines, every module should have its own routing module. This is possible through the \lstcode{RouterModule.forChild} method which may be called as often as needed.
+To define the application routes and map their components, the \lstcode{RouterModule\allowbreak .forRoot} or \lstcode{RouterModule.forChild} methods are used (\mylineref{lst:security-routing-module.ts}{routing_forChild}). The \lstcode{RouterModule.forRoot} method may only be called once and is usually located in the app-routing.module.ts file. Following the Angular code style guidelines, every module should have its own routing module. This is possible through the \lstcode{RouterModule.forChild} method which may be called as often as needed.
 
 The \textbf{path} argument must be set for each route. In case of a simple route, which maps to a \textbf{component}, the component in question must be specified (\mylineref{lst:security-routing-module.ts}{routing_simpleComponent}). A route can also be used as an organizing element for the application's URLs and so may not have a component but multiple routes (\mylineref{lst:security-routing-module.ts}{routing_children}). This is usually done once per module and allows the developer create well-structured URLs. There are many more arguments which define details such as path matching strategies or specific router-outlets.
 
@@ -95,7 +95,7 @@ Angular also allows the use of asynchronous routing, also called lazy loading. T
 
 The Angular framework relies heavily on \gls{di} and, as of version 4.3 \cite{interceptorAngularVersion} also offers Interception. As described in \myref{subsubsec:ngmodules}, the configuration of Angular's \gls{di} capabilities is achieved through the metadata of NgModules. Every component and provider listed in the module can be requested. Additionally, it is possible to configure providers in the \lstcode{@Injectable()} and \lstcode{@Component()} decorators. In doing so, the configuration will override any configuration done at the NgModule level. To make the injection work, Angular uses its own \lstcode{Injector} class. Instances of this class are created by the framework and the developer doesn't have to touch them in most cases. Though, if required by a certain action, it is possible to create and manipulate instances of this class. Every service is a singleton inside its scope, which is the \lstcode{Injector} instance. Angular automatically nests \lstcode{Injector} instances. Every component has its own \lstcode{Injector} instance which mirrors the component tree structure (see \myautoref{fig:componentHierarchy.png}). A request bubbles up from the \lstcode{Injector} instance of the component it was requested in. The first \lstcode{Injector} which can satisfy the request is used to resolve the dependency.
 
-\autoImg{componentHierarchy.png}{The Angular component hierarchy \cite{componentHierarchy}.}
+\autoImg{componentHierarchy.png}{The Angular component hierarchy. \cite{componentHierarchy}}
 
 As of version 4.3 Angular offers the possibility of interception. Angular's interception is limited to only the \lstcode{HttpClient} class, contrary to other \gls{di} frameworks where any class can be intercepted. To specify one or multiple interceptors, the developer has to configure a provider as shown in \mylineref{lst:app-module.ts}{module_interceptor}.
 
@@ -111,15 +111,15 @@ Angular Material is a framework, also developed by Google, which provides pre-bu
 \Subsubsection{Components}
 Each control is an Angular component. This means that controls can be used in the \gls{html} by inculding the corresponding tag, as shown in \mylineref{lst:navigation-bar.html}{navbar_mat_toolbar}. Any \gls{html} tag which starts with the \lstcode{mat-} prefix references an Angular Material control/component.
 
-This prefix was changed from \lstcode{md-} to the current \lstcode{mat-}. At the same time, Angular Material changed how the components are organized into modules. Previously, there was a single module called \lstcode{MaterialModule} which became deprecated and was replaced by dedicated modules for each single control, \zB \lstcode{MatButtonModule}. The Jukebox project currently uses 17 different controls, which results in having to import 17 different modules. To keep the app.moudle.ts file tidy, a custom module was created. This so-called \lstcode{MaterialMetaModule} imports and exports all 17 \enquote{submodules}, so that the \lstcode{AppModule} only has to import this one meta module.
-
-\file{dialog.ts}{Sample dialog in the SettingsComponent.}{JavaScript}
+This prefix was changed from \lstcode{md-} to the current \lstcode{mat-}. At the same time, Angular Material changed how the components are organized into modules. Previously, there was a single module called \lstcode{MaterialModule} which became deprecated and was replaced by dedicated modules for each single control, \zB \lstcode{MatButtonModule}. The Jukebox project currently uses 17 different controls, which results in having to import 17 different modules. To keep the app.moudle.ts file tidy, a custom module was created. This so-called \lstcode{Material\-MetaModule} imports and exports all 17 \enquote{submodules}, so that the \lstcode{AppModule} only has to import this one meta module.
 
 Many controls like buttons or the toolbar are only referenced in the \gls{html} because they don't contain much logic. These components are desinged to communicate through their events and properties. This can be achieved through bindings in the \gls{html} code (see \myref{subsubsec:bindings}). Especially for dialogs, a developer wants to have more control over how and when the dialog is displayed. Dialogs are also invoked through the \gls{ts}, for instance inside some method or event handler. Typically, the dialog contains some sort of question and the answer determines how the application should proceed. Since a dialog is a modal element which is always positioned as an overlay, it is unclear where the element should be placed in the \gls{dom}. Angular Material solves this by injecting the \lstcode{MatDialog} into the component's \gls{ts} file (\mylineref{lst:dialog.ts}{dialog_injected}). This means that the placement in the \gls{dom} is done by the framework and the developer doesn't have to worry about it.
 
 A filepicker dialog was implemented for the Jukebox project. This dialog serves the purpose of selecting a folder which the server should use to index *.mp3 files. Once the user clicks the \enquote{addPath} button, a dialog is created. This is done via the \lstcode{MatDialog.open()} method, as shown in \mylineref{lst:dialog.ts}{dialog_open}. The \lstcode{MatDialog.open()} method requires the type of an Angular component as its first argument. This determines the component to be displayed as the dialog's content. In addition, a configuration object may be passed to the method. The configuration object is of type \lstcode{MatDialogConfig} and is used to configure the dialog's appearance. One of its properties is the \lstcode{data} property which allows the developer to pass an arbitrary object into the dialog. This feature was used to pass a custom configuration object of type \lstcode{FilePickerConfig} (\mylineref{lst:dialog.ts}{dialog_filePickerConfig}).
 
-The \lstcode{MatDialog.open()} method returns a reference to the newly created dialog which is of type \lstcode{MatDialogRef<T>}. This class exposes certain methods to configure event handlers. Most notably, the \lstcode{afterClosed()} and \lstcode{afterOpen()} methods. These methods return \lstcode{Observable<R | undefined>} and \lstcode{Observable<void>}, respectively. The \lstcode{afterClosed()} method was used to retrieve the selected path from the \lstcode{FilePickerConfig} object and initiate an \gls{http} call to save this path.
+\file{dialog.ts}{Sample dialog in the \lstcode{SettingsComponent}.}{JavaScript}
+
+The \lstcode{MatDialog.open()} method returns a reference to the newly created dialog which is of type \lstcode{MatDialogRef<T>}. This class exposes certain methods to configure event handlers. Most notably, the \lstcode{afterClosed()} and \lstcode{afterOpen()} methods. These methods return \lstcode{Observable<R | undefined>} and \lstcode{Observ\-able<void>}, respectively. The \lstcode{afterClosed()} method was used to retrieve the selected path from the \lstcode{FilePickerConfig} object and initiate an \gls{http} call to save this path.
 
 \file{filePickerComponent.ts}{Excerpt from the \lstcode{FilePickerDialogComponent}.}{JavaScript}
 
@@ -139,7 +139,7 @@ During the development of the Jukebox project, a bug was discovered which result
 
 The \gls{http} protocol was designed for web pages and is based on client-initiated communication. There are techniques like long polling which simulate a two-way communication channel but even there, the client needs to initialize the communication. This becomes a problem in web applications which rely on events or push notifications rather than on polling. In the Jukebox project, one requirement was that a music player could be remote-controlled. Websockets were used to push events like \enquote{Next} or \enquote{Play/Pause} to the player.
 
-\file{websocket.ts}{Sample websocket usage.}{JavaScript}
-
 Websockets can be used by calling the \lstcode{WebSocket.send()} and \lstcode{WebSocket.close()} methods as well as listening to the various events. Another approach is to wrap the WebSocket into a RxJS \lstcode{Subject}, as shown in \myautoref{lst:websocket.ts} \cite{rxjs} \cite{js_websockets}. To do so, the developer creates an \lstcode{Observable} which binds to the events of the \lstcode{WebSocket} object (lines \ref{line:websocket_observable_start} to \ref{line:websocket_observable_stop}). Then an \lstcode{Observer} is created (line \ref{line:websocket_observer}). In this example, the \lstcode{Observer} is an object which has a \lstcode{next()} method that is empty. This is due to the fact that in the Jukebox project notifications are only received through the websocket. This \lstcode{next()} method is normally used to call the \lstcode{WebSocket.send()} method to send data back to the server. A RxJS \lstcode{Subject} is created from the \lstcode{Observer} and \lstcode{Observable} objects. This \lstcode{Subject} can then be subscribed to in order to receive incoming messages. To send messages the \lstcode{Subject.next()} method may be used.
 \revMark{send was used for the player control - clarify that}
+
+\file{websocket.ts}{Sample websocket usage.}{JavaScript}
