--- a/Report/pages/asp.tex
+++ b/Report/pages/asp.tex
@@ -24,15 +24,16 @@ Another concept defined by the \gls{owin} standard is the middleware pipeline. E
 
 Like any other C\# project, an \gls{asp} project is rooted in the \lstcode{Program} class and its \lstcode{Main()} method. As of .NET Core 2.x, the code required to start a \lstcode{WebHost} has been simplified, as shown in \myautoref{lst:main.cs} \cite{aspFundamentals}. In the Jukebox project, the \gls{url} was explicitly defined. It is still possible to configure options like the \gls{iis} integration, a custom content root path, and many more through the \lstcode{WebHostBuilder} class. Any configuration through the \lstcode{WebHostBuilder} will overwrite the configuration done via the launchSettings.json file.
 
+The underlying web server of \gls{asp} is called Kestrel. It is a minimalistic web server which only provides three features. Those are HTTPS, Websockets, and Unix sockets for high performance behind Nginx. Kestrel should never be used as a standalone solution, but rather in combination with another web server like \gls{iis}, Nginx or Apache \cite{kestrel}.
+
 \file{main.cs}{The \lstcode{Main()} method of the Jukebox project.}{NC_CSharp}
 
-The underlying web server of \gls{asp} is called Kestrel. It is a minimalistic web server which only provides three features. Those are HTTPS, Websockets, and Unix sockets for high performance behind Nginx. Kestrel should never be used as a standalone solution, but rather in combination with another web server like \gls{iis}, Nginx or Apache \cite{kestrel}.
 
 \Subsubsection{The \lstcode{Startup} class}
 
 The \lstcode{Startup} class is used to configure an \gls{asp} application. It is separated into two methods: the \lstcode{ConfigureServices()} and the \lstcode{Configure()} method. This class is called \lstcode{Startup} by convention, but may be named differently. If a another name is choosen, the developer has to specify it via the \lstcode{WebHostBuilder.UseStartup<T>()} method as shown in \myautoref{lst:main.cs}. The \lstcode{Startup} class does not implement any interfaces. The \gls{asp} framework detects the required methods via reflection. This is necessary since these methods have multiple applicable signatures, which are handled differently by the framework.
 
-\gls{di} is an integral part of the \gls{asp} framework and is configured in the \lstcode{ConfigureServices()} method. This method has one parameter of type \lstcode{IServiceCollection} which is an interface similar to the Autofac \lstcode{ConatinerBuilder} class. In order to make classes and framework parts available, such as the \gls{mvc} functionality of \gls{asp}, they have to be registered using this interface.
+\gls{di} is an integral part of the \gls{asp} framework and is configured in the \lstcode{ConfigureServices()} method. This method has one parameter of type \lstcode{IServiceCollection} which is an interface similar to the Autofac \lstcode{Conatiner\-Builder} class. In order to make classes and framework parts available, such as the \gls{mvc} functionality of \gls{asp}, they have to be registered using this interface.
 
 The \lstcode{IServiceCollection} interface provides many features which are sufficient for most projects, but it is not possible to configure interception using this interface. If the developer needs or wants to use interception, he has to change the signature of the \lstcode{ConfigureServices()} method to return an \lstcode{IServiceProvider} interface. This interface is Microsoft's abstraction of a \lstcode{Container} class which is used to resolve dependencies. In the Jukebox project, the Autofac \gls{di} framework was used, because it supports all of \gls{asp}'s \gls{di} interfaces \cite{autofacCoreDoc}. It should be noted that it is also possible to use other \gls{di} frameworks, but custom adapters may have to be implemented \cite{aspCustomDI}.
 
@@ -40,11 +41,13 @@ The Jukebox project uses a dual approach. \gls{asp} components are registered vi
 
 \file{configureJukebox.cs}{Configuring the \lstcode{IServiceCollection} in combination with an Autofac \lstcode{ContainerBuilder}.}{NC_CSharp}
 
-Once all components are registered, the \gls{asp} framework calls the \lstcode{Configure()} method. This method is used to build the \gls{owin} middleware pipeline. Its first argument is of type \lstcode{IApplicationBuilder} and is required. The second and third arguments are of type \lstcode{IHostingEnvironment} and \lstcode{ILoggerFactory}, respectively, and are optional.
+Once all components are registered, the \gls{asp} framework calls the \lstcode{Configure()} method. This method is used to build the \gls{owin} middleware pipeline. Its first argument is of type \lstcode{IApplicationBuilder} and is required. The second and third arguments are of type \lstcode{IHostingEnvironment} and \lstcode{ILog\-gerFactory}, respectively, and are optional.
 
 The \lstcode{IApplicationBuilder} interface is used to set up the pipeline, as shown in \myautoref{lst:configure.cs}. \gls{asp} provides extension methods for all of the framework's middlewares. There are multiple options to register a custom middleware. The \lstcode{IApplicationBuilder.Run()} method can be used to specify a delegate which will run and terminate the pipeline at this point. In order to chain middlewares the \lstcode{IApplicationBuilder.Use()} method can be used. This method also takes a middleware delegate as parameter. The \lstcode{IApplicationBuilder.UseMiddleware<T>()} method is used for middlewares which are written as a class. \cite{aspMiddleware}
 
 It is important to bear in mind that the middleware, which is registered first, will always be called first by the framework for each request that is processed. This means that the authentication middleware should always be registered before the \gls{mvc} middleware, otherwise requests might not be authenticated properly. In the Jukebox project, the \lstcode{ExceptionMiddleware} is registered first since it is supposed to catch any exception thrown in the pipeline later on. Next, the \lstcode{Swagger} and \lstcode{SpaMiddleware} are added because they do not require authentication. These are followed by the \lstcode{Authentication}, \gls{mvc}, and \lstcode{WebSocket} middlewares. Finally, the \lstcode{StaticFiles} middleware is added.
+
+\newpage
 
 \file{configure.cs}{Building the OWIN middleware pipeline.}{NC_CSharp}
 
@@ -63,9 +66,7 @@ The \lstcode{AddMvc()} extension method offers the possibility to configure the 
 
 To prevent unauthorized access, the \gls{mvc} package offers many ways to protect certain routes, also called actions. A developer may accept the default security settings or choose between filters and attributes to protect certain routes. It is important to note that the \gls{mvc} package does not authenticate or authorize any request at all. Another middleware is used specifically for this purpose. The \gls{jwt} Bearer middleware is the one used in the Jukebox project (see \myref{subsubsec:jwt}). \gls{mvc} only checks the \lstcode{HttpContext} to know whether and how a request is authorized, and then acts accordingly. By default, every route is unprotected. However, certain actions should only be executable if the request is authorized. There are two common solutions to this problem. First, a blacklist approach, where every route is accessible by default and the protected ones are declared explicitly. In this case, the developer uses the \lstcode{[Authorize]} attribute on any controller method which needs to be protected. The second option is to use a whitelist approach, where every route is protected by default and the unprotected routes are specified explicitly. As shown in \myautoref{lst:configureMvc.cs}, a filter is created using the \lstcode{AuthorizationPolicyBuilder} class and is applied to all routes. Then, all routes which shall be accessible without authorization are marked with the \lstcode{[AllowAnonymous]} attribute. The whitelist approach is used in the Jukebox project.
 
-\revMark{not building cuz of this} \newpage
-
-There are two ways of registering controllers for the \gls{mvc} package. By default, the \gls{mvc} package registers all classes with the \gls{di} container that are derived from the abstract \lstcode{Controller} base class and are located in the \enquote{Controllers} folder. If more functionality, such as interception, is needed the \lstcode{AddControllersAsServices()} configuration option can be used (\mylineref{lst:configureMvc.cs}{confMvc_controller}). This option forces the developer to register all controller classes explicitly. For the controllers registered in the Jukebox project, an interceptor is configured. This interceptor checks for null references passed to controller methods. If such a null reference is detected, the interceptor will throw a specific exception which results in a 400 \gls{http} response (see \myref{subsubsec:exceptionMiddleware}).
+There are two ways of registering controllers for the \gls{mvc} package. By default, the \gls{mvc} package registers all classes with the \gls{di} container that are derived from the abstract \lstcode{Controller} base class and are located in the \enquote{Controllers} folder. If more functionality, such as interception, is needed the \lstcode{AddControllersAsServices()} configuration option can be used, see \mylineref{lst:configureMvc.cs}{confMvc_controller}. This option forces the developer to register all controller classes explicitly. For the controllers registered in the Jukebox project, an interceptor is configured. This interceptor checks for null references passed to controller methods. If such a null reference is detected, the interceptor will throw a specific exception which results in a 400 \gls{http} response (see \myref{subsubsec:exceptionMiddleware}).
 
 \file{configureMvc.cs}{Registering the MVC package.}{NC_CSharp}
 
@@ -78,7 +79,7 @@ Mapping a \gls{url} to a controller action works either by convention or by expl
 
 Attributes are another way of explicitly configuring mappings. The \lstcode{[Route]} attribute is used for controllers only. This attribute was used in the Jukebox project, since all controllers are supposed to be part of the \enquote{api/} route. The \lstcode{[Route]} attribute also offers macros. With macros it is possible to use the same attribute for all controllers: \lstcode{[Route("api/[controller]/[action]")]}. The \lstcode{[controller]} macro tells the framework to use the name of the controller which is decorated by the \lstcode{[Route]} attribute. Similarly, the \lstcode{[action]} macro references the name of the method or its custom-specified route.
 
-For methods, also called actions, there are several attributes which are derived from the abstract \lstcode{HttpMethodAttribute} class. There is a matching attribute for each \gls{http} verb, \zB \lstcode{[HttpPost]}, \lstcode{[HttpGet]}, and so forth. Their main purpose is to specify the \gls{http} verb, in addition they include a template option to configure the \gls{mvc} mapping. This is neccessary to decide which method should be called on the controller if two \gls{url}s only differ in their \gls{http} verbs. A custom route is specified as a parameter in the \gls{http} verb attribute, \zB \lstcode{[HttpPost("my/custom/route")]}. Also, many \gls{rest} \gls{api}s use integers in the \gls{url} to reference a business object by its ID. This is supported through the curly bracket notation. A possible scenario is: some method should be executed on the \lstcode{Player} object with ID 11. This could be mapped to a \gls{url} like \enquote{/api/player/11/doSomething} and would result in an attribute such as \lstcode{[HttpPost("\{playerId\}/doSomething")]}. \cite{mvcRouting}
+For methods, also called actions, there are several attributes which are derived from the abstract \lstcode{HttpMethodAttribute} class. There is a matching attribute for each \gls{http} verb, \zB \lstcode{[HttpPost]}, \lstcode{[HttpGet]}, and so forth. Their main purpose is to specify the \gls{http} verb, in addition they include a template option to configure the \gls{mvc} mapping. This is neccessary to decide which method should be called on the controller if two \gls{url}s only differ in their \gls{http} verbs. A custom route is specified as a parameter in the \gls{http} verb attribute, \zB \lstcode{[HttpPost("my/custom/route")]}. Also, many \gls{rest} \gls{api}s use integers in the \gls{url} to reference a business object by its ID. This is supported through the curly bracket notation. A possible scenario is: some method should be executed on the \lstcode{Player} object with ID 11. This could be mapped to a \gls{url} like \enquote{/api/player/11/doSomething} and would result in an attribute such as \lstcode{[HttpPost("\{playerId\}/doSomething")]}. \\ \cite{mvcRouting}
 
 
 
@@ -106,7 +107,7 @@ Authentication is the process in which a client proves that he is the one he cla
 
 For the Jukebox project, the \gls{jwt} Bearer authentication was chosen \cite{jwt}. \gls{jwt} is an open standard for securely transmitting information in a self-contained, compact \gls{json} object. The information is secured either using the symmetric \gls{hmac} algorithm \cite{hmac}, or one of the asymmetric algorithms, namely \gls{rsa} or \gls{ecdsa} \cite{ecdsa}. \gls{jwt} was chosen because not only does it yield a token the server uses to authenticate a client, but it also transmits authorization information. This is especially important because the frontend can use this information to hide parts of the application depending on the user's level of authorization.
 
-Configuring the \gls{jwt} package is a multi-step procedure. First, the \lstcode{TokenValidationParameters} are set, as shown in \myautoref{lst:configureJwt.cs}. Then, a \lstcode{JwtTokenOptions} object is configured (\myautoref{lst:configureJwtTokenOptions.cs}) and a method for creating a \gls{jwt} token is implemented (\myautoref{lst:generateBasicAuthToken.cs}). Finally, the \gls{jwt} package is added to the middleware pipeline using the \lstcode{app.UseAuthentication()} extension method.
+Configuring the \gls{jwt} package is a multi-step procedure. First, the \lstcode{TokenVali\-dationParameters} are set, as shown in \myautoref{lst:configureJwt.cs}. Then, a \lstcode{JwtTokenOptions} object is configured (\myautoref{lst:configureJwtTokenOptions.cs}) and a method for creating a \gls{jwt} token is implemented (\myautoref{lst:generateBasicAuthToken.cs}). Finally, the \gls{jwt} package is added to the middleware pipeline using the \lstcode{app.UseAuthentication()} extension method.
 
 For the \lstcode{TokenValidationParameter}, a \lstcode{SymmetricSecurityKey} object is created which must be identical to the key object that is used to validate a \gls{jwt} token later on. Then, an \enquote{Issuer} and an \enquote{Audience} are set, both are optional. This serves the purpose of identifying the application (issuer) and the client (audience). Finally, the option to validate the lifetime of a token is set to \lstcode{true} and the clock skew is set to zero. \cite{jwtTokenAuth}
 
@@ -118,6 +119,7 @@ The \lstcode{JwtTokenOptions} object was written specifically for the Jukebox pr
 
 The last step in setting up the \gls{jwt} authentication package is to create a method which issues a new token. This method, shown in \myautoref{lst:generateBasicAuthToken.cs}, is part of the \lstcode{JwtAuthenticationService} in the Jukebox project. A \lstcode{ClaimsIdentity} object and a \lstcode{JwtTokenOptions} object are passed into the method. \lstcode{ClaimsIdentity} is the C\# object to manage a user in a claims-based authorization system, as described in \myref{subsubsec:claimsAuth}. First, a list of claims is instantiated. For this list, the \gls{jwt} Subject \enquote{Sub}, \gls{jwt} ID \enquote{Jti}, and Issued At \enquote{Iat} claims are created. The \gls{jwt} subject claim usually contains the username or email address. The \gls{jwt} ID claim contains a unique identifier, in the Jukebox project a \gls{guid} is used. The Issued At claim contains the current timestamp in \gls{utc} time. Then all claims stored in the \lstcode{ClaimsIdentity} are added to the claims list. These are claims defined by the web application and could contain a claim which grants access to the administrative section of the application. Then, a \lstcode{JwtSecurityToken} object is created. The \lstcode{JwtTokenOptions} are used to set the expiration, the issuer, and so on. Next, a refresh token is created. For the sake of simplicity, the Jukebox project uses a \gls{guid} as a refresh token. Finally, an \lstcode{AuthToken} \gls{dto} object is created which is used to send the information back to the client. So far, the \lstcode{JwtSecurityToken} is a C\# object which still needs to be serialized into a \gls{json} string. The serialization is handled by the \lstcode{JwtSecurityTokenHandler.WriteToken()} method. Both the \lstcode{JwtSecurityToken} and the \lstcode{JwtSecurityTokenHandler} classes are provided by the \gls{jwt} package.
 
+\newpage
 
 \file{generateBasicAuthToken.cs}{Generating the JWT Token.}{NC_CSharp}
 
@@ -129,13 +131,13 @@ For the Jukebox project, two custom claims were implemented. First, the \lstcode
 
 \Section{Custom Middlewares}
 
-The Jukebox project uses two custom middlewares. One is the \lstcode{ExceptionMiddleware} which translates custom exceptions thrown further down the middleware pipeline into \gls{http} responses. The other is the \lstcode{SpaMiddleware} which is needed to enable deep links into a \gls{spa}.
+The Jukebox project uses two custom middlewares. One is the \lstcode{ExceptionMid\-dleware} which translates custom exceptions thrown further down the middleware pipeline into \gls{http} responses. The other is the \lstcode{SpaMiddleware} which is needed to enable deep links into a \gls{spa}.
 
 \Subsubsection[exceptionMiddleware]{ExceptionMiddleware}
 
-The \lstcode{ExceptionMiddleware}, shown in \myautoref{lst:exceptionMiddleware.cs}, is the first middleware in the \gls{owin} pipeline. This middleware encloses the rest of the pipeline in a try-catch block which catches any \lstcode{InvalidRestOperationException}s that are thrown. The \lstcode{InvalidRestOperationException} class is an abstract base class for exceptions like the \lstcode{NoContentException} (\gls{http} 204), \lstcode{ForbiddenException} (\gls{http} 403), and many more. Every exception derived from the \lstcode{InvalidRestOperationException} is required to implement the abstract \lstcode{ResponseCode} property which specifies the \gls{http} status code to be returned. Furthermore, the \lstcode{InvalidRestOperationException} contains a \lstcode{CustomErrorCode} property. This property is of type \gls{guid} and has to be set via a constructor argument.
+The \lstcode{ExceptionMiddleware}, shown in \myautoref{lst:exceptionMiddleware.cs}, is the first middleware in the \gls{owin} pipeline. This middleware encloses the rest of the pipeline in a try-catch block which catches any \lstcode{InvalidRestOperationEx\-ception}s that are thrown. The \lstcode{InvalidRestOperationException} class is an abstract base class for exceptions like the \lstcode{NoContentException} (\gls{http} 204), \lstcode{ForbiddenException} (\gls{http} 403), and many more. Every exception derived from the \lstcode{InvalidRestOperationException} is required to implement the abstract \lstcode{ResponseCode} property which specifies the \gls{http} status code to be returned. Furthermore, the \lstcode{InvalidRestOperationException} contains a \lstcode{CustomErrorCode} property. This property is of type \gls{guid} and has to be set via a constructor argument.
 
-Once such an exception is thrown, it will be caught in the catch block of the middleware. In this catch block, the \lstcode{StatusCode} property of the \lstcode{HttpContext.Response} object is set to the \lstcode{ResponseCode} property of the \lstcode{InvalidRestOperationException}. Then, an \lstcode{ExceptionDTO} object will be created which contains the error message and error \gls{guid}. Although the exception class is already marked as \lstcode{[Serializable]}, this extra object is used in order to transmit only the error message and \gls{guid} - contrary to an exception which is serialized with its stack trace and other debug information not relevant in this scenario. Finally, the \lstcode{ExceptionDTO} will be serialized to a \gls{json} string and sent to the client.
+Once such an exception is thrown, it will be caught in the catch block of the middleware. In this catch block, the \lstcode{StatusCode} property of the \lstcode{HttpContext\allowbreak .Response} object is set to the \lstcode{ResponseCode} property of the \lstcode{InvalidRestOp\-er\-a\-tionException}. Then, an \lstcode{ExceptionDTO} object will be created which contains the error message and error \gls{guid}. Although the exception class is already marked as \lstcode{[Serializable]}, this extra object is used in order to transmit only the error message and \gls{guid} - contrary to an exception which is serialized with its stack trace and other debug information not relevant in this scenario. Finally, the \lstcode{ExceptionDTO} will be serialized to a \gls{json} string and sent to the client.
 
 \file{exceptionMiddleware.cs}{The \lstcode{ExceptionMiddleware}.}{NC_CSharp}
 
@@ -152,7 +154,9 @@ Whether a \gls{url} is a deep link or not is determined by a set of rules. Most 
 
 When a deep link is found the middleware sets the \gls{http} status code to 200 OK and returns the index.html file. First attempts to solve this problem used a redirect mechanism to serve the index.html. This worked to the extent that the index.html file was served, but failed overall, because the deep link was lost due to the redirect. Since redirecting is not possible, the \lstcode{SpaMiddleware} needs to know where the index.html file is located. This may be achived by convention or explicit configuration. The middleware checks the \gls{asp} ContentRoot folder whether it contains a file called \enquote{index.html} without distinguishing between upper and lower case. If no file is found and none is specified through the \lstcode{PathToIndex} property on the configuration object, an exception is thrown.
 
-\file{spaMiddleware.cs}{The \lstcode{SpaMiddleware}}{NC_CSharp}
+\newpage
+
+\file{spaMiddleware.cs}{The \lstcode{SpaMiddleware}.}{NC_CSharp}
 
 \Section{Entity Framework Core}
 
@@ -201,7 +205,7 @@ The backend C\# Solution, shown in \myautoref{fig:projectStructure.png}, contain
 
 The database projects contain one project with specific SQLite database classes and another one with in-memory database helper classes. Both projects contain neither domain classes nor the abstract data context because those classes are used by all databases and should therefore be located in a separate project. Using a separate project for database engine specific classes makes it easy to support another engine later on. This is due to the fact that a migration is engine specific and the \gls{ef} command line tools do not support multiple engines in one project. It is possible to use a single set of migrations for different database engines, but it requires the developer to write the migrations on his own.
 
-The framework solution folder contains the \lstcode{Jukebox.Common} and \lstcode{Jukebox.Common.Abstractions} projects. All interfaces for business and validation logic classes are part of the \lstcode{Jukebox.Common.Abstractions} project. Furthermore, the domain classes and the abstract data context are part of this \gls{dll}. All business and validation implementations are contained in the \lstcode{Jukebox.Common} project. This separation makes it possible to swap implementations without breaking too many dependencies.
+The framework solution folder contains the \lstcode{Jukebox.Common} and \lstcode{Jukebox\allowbreak .Common\allowbreak .Abstractions} projects. All interfaces for business and validation logic classes are part of the \lstcode{Jukebox.Common.Abstractions} project. Furthermore, the domain classes and the abstract data context are part of this \gls{dll}. All business and validation implementations are contained in the \lstcode{Jukebox\allowbreak .Common} project. This separation makes it possible to swap implementations without breaking too many dependencies.
 
 Every good application should be tested to a certain degree to ensure that it works correctly. The Jukebox project does not contain many tests, because it is a proof-of-concept application. However, acceptance tests are easy to write and maintain, and thus provide an economic compromise between development time and quality.
 
@@ -217,14 +221,16 @@ For each domain there is one service class. These services are accessed through 
 
 \file{IPlayerService.cs}{The \lstcode{IPlayerService} interface.}{NC_CSharp}
 
-Validation is an important aspect of any application. The backend has to verify that the data sent by a client is structurally and semantically correct and that the client is authorized to execute the action. This is done by interception in the Jukebox project. Each service has an associated interceptor as well as an associated validator class. The interceptor deceids which aspects of a method have to be validated and the validator class contains the logic for the validation. This separation is necessary because the interceptor is tightly coupled to the service it is intercepting, while the validator should only be concerned with the object it is supposed to validate. The \lstcode{IPlayerService} interface (\myautoref{lst:IPlayerService.cs}) contains a method called \lstcode{AddSongToPlayerAsync()}. This method will be intercepted and the interceptor has to validate that both the player and the song with the given ID do exist. For this purpose the interceptor holds a reference to the \lstcode{PlayerValidator} and the \lstcode{SongValidator} objects which contain the needed methods for validation, as shown in \myautoref{lst:addSongToPlayerAsync.cs}. If the validation methods would reside within the interceptor, this scenario would not be possible.
+Validation is an important aspect of any application. The backend has to verify that the data sent by a client is structurally and semantically correct and that the client is authorized to execute the action. This is done by interception in the Jukebox project. Each service has an associated interceptor as well as an associated validator class. The interceptor deceids which aspects of a method have to be validated and the validator class contains the logic for the validation. This separation is necessary because the interceptor is tightly coupled to the service it is intercepting, while the validator should only be concerned with the object it is supposed to validate. The \lstcode{IPlayerService} interface contains a method called \lstcode{AddSongToPlayerAsync()} (\myautoref{lst:IPlayerService.cs}). This method will be intercepted and the interceptor has to validate that both the player and the song with the given ID do exist. For this purpose the interceptor holds a reference to the \lstcode{PlayerValidator} and the \lstcode{SongValidator} objects which contain the needed methods for validation, as shown in \myautoref{lst:addSongToPlayerAsync.cs}. If the validation methods would reside within the interceptor, this scenario would not be possible.
 
 \file{addSongToPlayerAsync.cs}{Intercepting the \lstcode{AddSongToPlayerAsync} method.}{NC_CSharp}
 
 \Section{ASP.NET Core Websockets}
 
-To use websockets in \gls{asp}, the websocket middleware must be added to the middleware pipeline. Here, the developer can configure settings like the \lstcode{KeepAliveInterval} and the \lstcode{ReceiveBufferSize}. Whether a request is a request for a websocket or not, can be detected using the \lstcode{IsWebSocketRequest} property on the \lstcode{HttpContext.WebSockets} object. When such a request is detected, the communication can be established using the \lstcode{AcceptWebSocketAsync()} method on the \lstcode{HttpContext.WebSocket} object. This method returns a \lstcode{Task<WebSocket>} of which the \lstcode{WebSocket} is used for the entire communication. \cite{aspWebsockets}
+To use websockets in \gls{asp}, the websocket middleware must be added to the middleware pipeline. Here, the developer can configure settings like the \lstcode{KeepAliveInterval} and the \lstcode{ReceiveBufferSize}. Whether a request is a request for a websocket or not, can be detected using the \lstcode{IsWebSocketRequest} property on the \lstcode{HttpContext.WebSockets} object. When such a request is detected, the communication can be established using the \lstcode{AcceptWebSocket\-Async()} method on the \lstcode{HttpContext.WebSocket} object. This method returns a \lstcode{Task<WebSocket>} of which the \lstcode{WebSocket} is used for the entire communication. \cite{aspWebsockets}
 
 After accepting the socket, the Jukebox \gls{asp} server will authenticate the client and, if the authentication was successful, create a \lstcode{Player} object. Since the websocket connection will be terminated once the request is finished, the server will use a \enquote{keep-alive loop}, as shown in \myautoref{lst:HandlePlayerOwnerWebsocket.cs}. This loop will wait for any message coming from the player. Once a message arrives, the server checks whether the client wants to terminate the session or has sent data. In case of termination, the websocket will be closed and the \lstcode{Player} object will be destroyed. If the client has sent data, the server will handle the message in its \lstcode{HandlePlayerMessage()} method.
+
+\newpage
 
 \file{HandlePlayerOwnerWebsocket.cs}{The \enquote{keep-alive loop} for a websocket.}{NC_CSharp}
